LtlSharp/output/LTLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g 2012-08-27 09:19:23

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  LtlSharp 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class LTLParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT_LINE", "NEWLINE", "PROPOSITION", "'!'", "'&'", "'('", "')'", "'->'", "'<->'", "'<=>'", "'=>'", "'F'", "'G'", "'R'", "'U'", "'W'", "'X'", "'|'"
	};
	public const int EOF=-1;
	public const int T__7=7;
	public const int T__8=8;
	public const int T__9=9;
	public const int T__10=10;
	public const int T__11=11;
	public const int T__12=12;
	public const int T__13=13;
	public const int T__14=14;
	public const int T__15=15;
	public const int T__16=16;
	public const int T__17=17;
	public const int T__18=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int COMMENT_LINE=4;
	public const int NEWLINE=5;
	public const int PROPOSITION=6;

	public LTLParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public LTLParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return LTLParser.tokenNames; } }
	public override string GrammarFileName { get { return "/Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public sealed partial class parse_return : AstParserRuleReturnScope<object, IToken>
	{
		public LTLFormula value;
		public parse_return(LTLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LTLParser grammar);
	}

	partial void EnterRule_parse();
	partial void LeaveRule_parse();

	// $ANTLR start "parse"
	// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:11:8: public parse returns [LTLFormula value] : formula EOF ;
	[GrammarRule("parse")]
	public LTLParser.parse_return parse()
	{
		EnterRule_parse();
		EnterRule("parse", 1);
		TraceIn("parse", 1);
		LTLParser.parse_return retval = new LTLParser.parse_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF2 = default(IToken);
		LTLParser.formula_return formula1 = default(LTLParser.formula_return);

		object EOF2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "parse");
		DebugLocation(11, 2);
		try
		{
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:12:3: ( formula EOF )
			DebugEnterAlt(1);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:12:6: formula EOF
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(12, 6);
			PushFollow(Follow._formula_in_parse60);
			formula1=formula();
			PopFollow();

			adaptor.AddChild(root_0, formula1.Tree);
			DebugLocation(12, 14);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_parse62); 
			EOF2_tree = (object)adaptor.Create(EOF2);
			adaptor.AddChild(root_0, EOF2_tree);
			DebugLocation(12, 18);
			retval.value = (formula1!=null?formula1.value:default(LTLFormula));

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("parse", 1);
			LeaveRule("parse", 1);
			LeaveRule_parse();
		}
		DebugLocation(13, 2);
		} finally { DebugExitRule(GrammarFileName, "parse"); }
		return retval;

	}
	// $ANTLR end "parse"

	private sealed partial class formula_return : AstParserRuleReturnScope<object, IToken>
	{
		public LTLFormula value;
		public formula_return(LTLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LTLParser grammar);
	}

	partial void EnterRule_formula();
	partial void LeaveRule_formula();

	// $ANTLR start "formula"
	// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:15:1: formula returns [LTLFormula value] : f= strongbinary ;
	[GrammarRule("formula")]
	private LTLParser.formula_return formula()
	{
		EnterRule_formula();
		EnterRule("formula", 2);
		TraceIn("formula", 2);
		LTLParser.formula_return retval = new LTLParser.formula_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		LTLParser.strongbinary_return f = default(LTLParser.strongbinary_return);

		try { DebugEnterRule(GrammarFileName, "formula");
		DebugLocation(15, 2);
		try
		{
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:16:3: (f= strongbinary )
			DebugEnterAlt(1);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:16:6: f= strongbinary
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(16, 8);
			PushFollow(Follow._strongbinary_in_formula88);
			f=strongbinary();
			PopFollow();

			adaptor.AddChild(root_0, f.Tree);
			DebugLocation(16, 23);
			retval.value = (f!=null?f.value:default(LTLFormula));

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("formula", 2);
			LeaveRule("formula", 2);
			LeaveRule_formula();
		}
		DebugLocation(17, 2);
		} finally { DebugExitRule(GrammarFileName, "formula"); }
		return retval;

	}
	// $ANTLR end "formula"

	private sealed partial class strongbinary_return : AstParserRuleReturnScope<object, IToken>
	{
		public LTLFormula value;
		public strongbinary_return(LTLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LTLParser grammar);
	}

	partial void EnterRule_strongbinary();
	partial void LeaveRule_strongbinary();

	// $ANTLR start "strongbinary"
	// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:19:1: strongbinary returns [LTLFormula value] : a= implyequiv ( '<=>' b= strongbinary | '=>' b= strongbinary )? ;
	[GrammarRule("strongbinary")]
	private LTLParser.strongbinary_return strongbinary()
	{
		EnterRule_strongbinary();
		EnterRule("strongbinary", 3);
		TraceIn("strongbinary", 3);
		LTLParser.strongbinary_return retval = new LTLParser.strongbinary_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal3 = default(IToken);
		IToken string_literal4 = default(IToken);
		LTLParser.implyequiv_return a = default(LTLParser.implyequiv_return);
		LTLParser.strongbinary_return b = default(LTLParser.strongbinary_return);

		object string_literal3_tree = default(object);
		object string_literal4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "strongbinary");
		DebugLocation(19, 2);
		try
		{
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:20:3: (a= implyequiv ( '<=>' b= strongbinary | '=>' b= strongbinary )? )
			DebugEnterAlt(1);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:20:6: a= implyequiv ( '<=>' b= strongbinary | '=>' b= strongbinary )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(20, 8);
			PushFollow(Follow._implyequiv_in_strongbinary112);
			a=implyequiv();
			PopFollow();

			adaptor.AddChild(root_0, a.Tree);
			DebugLocation(20, 21);
			 retval.value = (a!=null?a.value:default(LTLFormula)); 
			DebugLocation(21, 6);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:21:6: ( '<=>' b= strongbinary | '=>' b= strongbinary )?
			int alt1=3;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_0 = input.LA(1);

			if ((LA1_0==13))
			{
				alt1 = 1;
			}
			else if ((LA1_0==14))
			{
				alt1 = 2;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:22:8: '<=>' b= strongbinary
				{
				DebugLocation(22, 8);
				string_literal3=(IToken)Match(input,13,Follow._13_in_strongbinary132); 
				string_literal3_tree = (object)adaptor.Create(string_literal3);
				adaptor.AddChild(root_0, string_literal3_tree);
				DebugLocation(22, 16);
				PushFollow(Follow._strongbinary_in_strongbinary138);
				b=strongbinary();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(22, 31);
				 retval.value = new StrongEquivalence ((a!=null?a.value:default(LTLFormula)), (b!=null?b.value:default(LTLFormula))); 

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:23:10: '=>' b= strongbinary
				{
				DebugLocation(23, 10);
				string_literal4=(IToken)Match(input,14,Follow._14_in_strongbinary151); 
				string_literal4_tree = (object)adaptor.Create(string_literal4);
				adaptor.AddChild(root_0, string_literal4_tree);
				DebugLocation(23, 17);
				PushFollow(Follow._strongbinary_in_strongbinary157);
				b=strongbinary();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(23, 32);
				 retval.value = new StrongImplication ((a!=null?a.value:default(LTLFormula)), (b!=null?b.value:default(LTLFormula))); 

				}
				break;

			}
			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("strongbinary", 3);
			LeaveRule("strongbinary", 3);
			LeaveRule_strongbinary();
		}
		DebugLocation(25, 2);
		} finally { DebugExitRule(GrammarFileName, "strongbinary"); }
		return retval;

	}
	// $ANTLR end "strongbinary"

	private sealed partial class implyequiv_return : AstParserRuleReturnScope<object, IToken>
	{
		public LTLFormula value;
		public implyequiv_return(LTLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LTLParser grammar);
	}

	partial void EnterRule_implyequiv();
	partial void LeaveRule_implyequiv();

	// $ANTLR start "implyequiv"
	// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:27:1: implyequiv returns [LTLFormula value] : a= binary ( '<->' b= implyequiv | '->' b= implyequiv )? ;
	[GrammarRule("implyequiv")]
	private LTLParser.implyequiv_return implyequiv()
	{
		EnterRule_implyequiv();
		EnterRule("implyequiv", 4);
		TraceIn("implyequiv", 4);
		LTLParser.implyequiv_return retval = new LTLParser.implyequiv_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal5 = default(IToken);
		IToken string_literal6 = default(IToken);
		LTLParser.binary_return a = default(LTLParser.binary_return);
		LTLParser.implyequiv_return b = default(LTLParser.implyequiv_return);

		object string_literal5_tree = default(object);
		object string_literal6_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "implyequiv");
		DebugLocation(27, 2);
		try
		{
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:28:3: (a= binary ( '<->' b= implyequiv | '->' b= implyequiv )? )
			DebugEnterAlt(1);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:28:6: a= binary ( '<->' b= implyequiv | '->' b= implyequiv )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(28, 8);
			PushFollow(Follow._binary_in_implyequiv189);
			a=binary();
			PopFollow();

			adaptor.AddChild(root_0, a.Tree);
			DebugLocation(28, 17);
			 retval.value = (a!=null?a.value:default(LTLFormula)); 
			DebugLocation(29, 6);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:29:6: ( '<->' b= implyequiv | '->' b= implyequiv )?
			int alt2=3;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==12))
			{
				alt2 = 1;
			}
			else if ((LA2_0==11))
			{
				alt2 = 2;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:30:8: '<->' b= implyequiv
				{
				DebugLocation(30, 8);
				string_literal5=(IToken)Match(input,12,Follow._12_in_implyequiv209); 
				string_literal5_tree = (object)adaptor.Create(string_literal5);
				adaptor.AddChild(root_0, string_literal5_tree);
				DebugLocation(30, 16);
				PushFollow(Follow._implyequiv_in_implyequiv215);
				b=implyequiv();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(30, 29);
				 retval.value = new Equivalence ((a!=null?a.value:default(LTLFormula)), (b!=null?b.value:default(LTLFormula))); 

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:31:10: '->' b= implyequiv
				{
				DebugLocation(31, 10);
				string_literal6=(IToken)Match(input,11,Follow._11_in_implyequiv228); 
				string_literal6_tree = (object)adaptor.Create(string_literal6);
				adaptor.AddChild(root_0, string_literal6_tree);
				DebugLocation(31, 17);
				PushFollow(Follow._implyequiv_in_implyequiv234);
				b=implyequiv();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(31, 30);
				 retval.value = new Implication ((a!=null?a.value:default(LTLFormula)), (b!=null?b.value:default(LTLFormula))); 

				}
				break;

			}
			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("implyequiv", 4);
			LeaveRule("implyequiv", 4);
			LeaveRule_implyequiv();
		}
		DebugLocation(33, 2);
		} finally { DebugExitRule(GrammarFileName, "implyequiv"); }
		return retval;

	}
	// $ANTLR end "implyequiv"

	private sealed partial class binary_return : AstParserRuleReturnScope<object, IToken>
	{
		public LTLFormula value;
		public binary_return(LTLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LTLParser grammar);
	}

	partial void EnterRule_binary();
	partial void LeaveRule_binary();

	// $ANTLR start "binary"
	// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:35:1: binary returns [LTLFormula value] : a= conjunction ( 'U' b= binary | 'R' b= binary | 'W' b= binary )? ;
	[GrammarRule("binary")]
	private LTLParser.binary_return binary()
	{
		EnterRule_binary();
		EnterRule("binary", 5);
		TraceIn("binary", 5);
		LTLParser.binary_return retval = new LTLParser.binary_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal7 = default(IToken);
		IToken char_literal8 = default(IToken);
		IToken char_literal9 = default(IToken);
		LTLParser.conjunction_return a = default(LTLParser.conjunction_return);
		LTLParser.binary_return b = default(LTLParser.binary_return);

		object char_literal7_tree = default(object);
		object char_literal8_tree = default(object);
		object char_literal9_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "binary");
		DebugLocation(35, 2);
		try
		{
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:36:3: (a= conjunction ( 'U' b= binary | 'R' b= binary | 'W' b= binary )? )
			DebugEnterAlt(1);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:36:6: a= conjunction ( 'U' b= binary | 'R' b= binary | 'W' b= binary )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(36, 8);
			PushFollow(Follow._conjunction_in_binary268);
			a=conjunction();
			PopFollow();

			adaptor.AddChild(root_0, a.Tree);
			DebugLocation(36, 22);
			 retval.value = (a!=null?a.value:default(LTLFormula)); 
			DebugLocation(37, 6);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:37:6: ( 'U' b= binary | 'R' b= binary | 'W' b= binary )?
			int alt3=4;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			switch (input.LA(1))
			{
			case 18:
				{
				alt3 = 1;
				}
				break;
			case 17:
				{
				alt3 = 2;
				}
				break;
			case 19:
				{
				alt3 = 3;
				}
				break;
			}

			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:37:8: 'U' b= binary
				{
				DebugLocation(37, 8);
				char_literal7=(IToken)Match(input,18,Follow._18_in_binary280); 
				char_literal7_tree = (object)adaptor.Create(char_literal7);
				adaptor.AddChild(root_0, char_literal7_tree);
				DebugLocation(37, 14);
				PushFollow(Follow._binary_in_binary286);
				b=binary();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(37, 23);
				 retval.value = new Until ((a!=null?a.value:default(LTLFormula)), (b!=null?b.value:default(LTLFormula))); 

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:38:8: 'R' b= binary
				{
				DebugLocation(38, 8);
				char_literal8=(IToken)Match(input,17,Follow._17_in_binary297); 
				char_literal8_tree = (object)adaptor.Create(char_literal8);
				adaptor.AddChild(root_0, char_literal8_tree);
				DebugLocation(38, 14);
				PushFollow(Follow._binary_in_binary303);
				b=binary();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(38, 23);
				 retval.value = new Release ((a!=null?a.value:default(LTLFormula)), (b!=null?b.value:default(LTLFormula))); 

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:39:8: 'W' b= binary
				{
				DebugLocation(39, 8);
				char_literal9=(IToken)Match(input,19,Follow._19_in_binary314); 
				char_literal9_tree = (object)adaptor.Create(char_literal9);
				adaptor.AddChild(root_0, char_literal9_tree);
				DebugLocation(39, 14);
				PushFollow(Follow._binary_in_binary320);
				b=binary();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(39, 23);
				 retval.value = new Unless ((a!=null?a.value:default(LTLFormula)), (b!=null?b.value:default(LTLFormula))); 

				}
				break;

			}
			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("binary", 5);
			LeaveRule("binary", 5);
			LeaveRule_binary();
		}
		DebugLocation(41, 2);
		} finally { DebugExitRule(GrammarFileName, "binary"); }
		return retval;

	}
	// $ANTLR end "binary"

	private sealed partial class conjunction_return : AstParserRuleReturnScope<object, IToken>
	{
		public LTLFormula value;
		public conjunction_return(LTLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LTLParser grammar);
	}

	partial void EnterRule_conjunction();
	partial void LeaveRule_conjunction();

	// $ANTLR start "conjunction"
	// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:43:1: conjunction returns [LTLFormula value] : a= disjunction ( '&' b= conjunction )? ;
	[GrammarRule("conjunction")]
	private LTLParser.conjunction_return conjunction()
	{
		EnterRule_conjunction();
		EnterRule("conjunction", 6);
		TraceIn("conjunction", 6);
		LTLParser.conjunction_return retval = new LTLParser.conjunction_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal10 = default(IToken);
		LTLParser.disjunction_return a = default(LTLParser.disjunction_return);
		LTLParser.conjunction_return b = default(LTLParser.conjunction_return);

		object char_literal10_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "conjunction");
		DebugLocation(43, 2);
		try
		{
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:44:3: (a= disjunction ( '&' b= conjunction )? )
			DebugEnterAlt(1);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:44:6: a= disjunction ( '&' b= conjunction )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(44, 8);
			PushFollow(Follow._disjunction_in_conjunction358);
			a=disjunction();
			PopFollow();

			adaptor.AddChild(root_0, a.Tree);
			DebugLocation(44, 22);
			 retval.value = (a!=null?a.value:default(LTLFormula)); 
			DebugLocation(45, 6);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:45:6: ( '&' b= conjunction )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_0 = input.LA(1);

			if ((LA4_0==8))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:45:7: '&' b= conjunction
				{
				DebugLocation(45, 7);
				char_literal10=(IToken)Match(input,8,Follow._8_in_conjunction369); 
				char_literal10_tree = (object)adaptor.Create(char_literal10);
				adaptor.AddChild(root_0, char_literal10_tree);
				DebugLocation(45, 13);
				PushFollow(Follow._conjunction_in_conjunction375);
				b=conjunction();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(45, 27);
				 if (retval.value.GetType() == typeof(Conjunction)) { ((Conjunction) retval.value).Push ((b!=null?b.value:default(LTLFormula))); } else { retval.value = new Conjunction (retval.value, (b!=null?b.value:default(LTLFormula))); } 

				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("conjunction", 6);
			LeaveRule("conjunction", 6);
			LeaveRule_conjunction();
		}
		DebugLocation(46, 2);
		} finally { DebugExitRule(GrammarFileName, "conjunction"); }
		return retval;

	}
	// $ANTLR end "conjunction"

	private sealed partial class disjunction_return : AstParserRuleReturnScope<object, IToken>
	{
		public LTLFormula value;
		public disjunction_return(LTLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LTLParser grammar);
	}

	partial void EnterRule_disjunction();
	partial void LeaveRule_disjunction();

	// $ANTLR start "disjunction"
	// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:48:1: disjunction returns [LTLFormula value] : a= unary ( '|' b= disjunction )? ;
	[GrammarRule("disjunction")]
	private LTLParser.disjunction_return disjunction()
	{
		EnterRule_disjunction();
		EnterRule("disjunction", 7);
		TraceIn("disjunction", 7);
		LTLParser.disjunction_return retval = new LTLParser.disjunction_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal11 = default(IToken);
		LTLParser.unary_return a = default(LTLParser.unary_return);
		LTLParser.disjunction_return b = default(LTLParser.disjunction_return);

		object char_literal11_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "disjunction");
		DebugLocation(48, 2);
		try
		{
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:49:3: (a= unary ( '|' b= disjunction )? )
			DebugEnterAlt(1);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:49:6: a= unary ( '|' b= disjunction )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(49, 8);
			PushFollow(Follow._unary_in_disjunction403);
			a=unary();
			PopFollow();

			adaptor.AddChild(root_0, a.Tree);
			DebugLocation(49, 16);
			 retval.value = (a!=null?a.value:default(LTLFormula)); 
			DebugLocation(50, 6);
			// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:50:6: ( '|' b= disjunction )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_0 = input.LA(1);

			if ((LA5_0==21))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// /Users/acailliau/Projects/LtlSharp/LtlSharp/LTL.g:50:7: '|' b= disjunction
				{
				DebugLocation(50, 7);
				char_literal11=(IToken)Match(input,21,Follow._21_in_disjunction414); 
				char_literal11_tree = (object)adaptor.Create(char_literal11);
				adaptor.AddChild(root_0, char_literal11_tree);
				DebugLocation(50, 13);
				PushFollow(Follow._disjunction_in_disjunction420);
				b=disjunction();
				PopFollow();

				adaptor.AddChild(root_0, b.Tree);
				DebugLocation(50, 27);
				 if (retval.value.GetType() == typeof(Disjunction)) { ((Disjunction) retval.value).Push ((b!=null?b.value:default(LTLFormula))); } else { retval.value = new Disjunction (retval.value, (b!=null?b.value:default(LTLFormula))); } 

				}
				break;

			}
			} finally { DebugExitSubRule(5); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("disjunction", 7);
			LeaveRule("disjunction", 7);
			LeaveRule_disjunction();
		}
		DebugLocation(51, 2);
		} finally { DebugExitRule(GrammarFileName, "disjunction"); }
		return retval;

	}
	// $ANTLR end "disjunction"

	private sealed partial class unary_return : AstParserRuleReturnScope<object, IToken>
	{
		public LTLFormula value;
		public unary_return(LTLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LTLParser grammar);
	}

	partial void EnterRule_unary();
	partial void LeaveRule_unary();
